Change images and link at home page

--- a/ecard_app/templates/index.html
+++ b/ecard_app/templates/index.html
@@ -8,7 +8,7 @@
 
 {% block content %}
   <div class="container">
-    <h1>Gratitude Cards 感恩卡</h1>
+    <h1>Blessing Cards 祈福卡</h1>
     <br>
     <div class="row">
         <div class="col-sm"><img src = "{% static 'images/BlessingCard2.jpg' %}" alt ="" class="img-fluid">
