change marquee timing

--- a/ecard_app/templates/index.html
+++ b/ecard_app/templates/index.html
@@ -43,5 +43,5 @@
     <br>
 
   </div>
-  <script src="{% static 'scroll.js' %}"></script>   
+  <!-- <script src="{% static 'scroll.js' %}"></script> -->
 {% endblock content %}
