--- a/static/css/main.css
+++ b/static/css/main.css
@@ -66,7 +66,7 @@ body {
 }
 
 */
-
+/*
 body {
     background-image: url("../images/wishing_pond.jpg");
     background-repeat: no-repeat;
@@ -103,4 +103,38 @@ body {
     0%   { top:   8em }
     100% { top: -11em }
 }
+*/
+
+body {
+    background-image: url("../images/wishing_pond.jpg");
+    background-repeat: no-repeat;
+    background-size: cover; 
+   }
+
+
+.col-sm {
+    background-color: #e6f2ff;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+
+.mqcontainer {
+    width: 18em;
+    height: 18em;
+    margin: 1em auto;
+    overflow: hidden;
+    background: white;
+    position: relative;
+    box-sizing: border-box;
+}
+
+
+.marquee {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border: solid #ccc;
+}
+
 
