--- a/ecard_app/templates/index.html
+++ b/ecard_app/templates/index.html
@@ -11,7 +11,7 @@
     <h1>Blessing Cards 祈福卡</h1>
     <br>
     <div class="row">
-        <div class="col-sm"><img src = "{% static 'images/BlessingCard2.jpg' %}" alt ="" class="img-fluid">
+        <div class="col-sm"><img src = "{% static 'images/vesak-day.jpg' %}" alt ="" class="img-fluid">
           {{quote1 | safe}}
             <form action="" method="post">
               {% csrf_token %}
@@ -20,7 +20,7 @@
             </form> 
         </div>
 
-        <div class="col-sm"><img src = "{% static 'images/BWM SG55Weilin.gif' %}" alt ="" class="img-fluid">
+        <div class="col-sm"><img src = "{% static 'images/enlightenment-buddha-bodhi-tree.jpg' %}" alt ="" class="img-fluid">
           {{quote2 | safe}}
             <form action="" method="post">
               {% csrf_token %}
@@ -29,7 +29,7 @@
             </form>                 
         </div>
 
-        <div class="col-sm"><img src = "{% static 'images/BlessingCard1.jpg' %}" alt ="" class="img-fluid">
+        <div class="col-sm"><img src = "{% static 'images/vesak.jpg' %}" alt ="" class="img-fluid">
           {{quote3 | safe}}
             <form action="" method="post">
               {% csrf_token %}
