--- a/static/marq.css
+++ b/static/marq.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../images/wishing_pond.jpg");
+    background-image: url("../images/Background_Flower.jpg");
     background-repeat: no-repeat;
     background-size: cover; 
    }
