--- a/static/css/main.css
+++ b/static/css/main.css
@@ -106,7 +106,7 @@ body {
 */
 
 body {
-    background-image: url("../images/wishing_pond.jpg");
+    background-image: url("../images/Background_Flower.jpg");
     background-repeat: no-repeat;
     background-size: cover; 
    }
