--- a/templates/base.html
+++ b/templates/base.html
@@ -19,16 +19,19 @@
     {% endblock title %}
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src = "{% static 'images/BWM_Logo.png' %}" alt ="Bodhicitta" height="45" width="45"></a>
+  <a class="navbar-brand" href="#"><img src = "{% static 'images/sg_lamrim.jpg' %}" alt ="Bodhicitta" height="45" width="110"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <!--
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="https://bwmonastery.org.sg/">Home <span class="sr-only">(current)</span></a>
 
     </div>
+
   </div>
+  -->
 </nav>
 
   </head>
